--- a/projects/admin/src/locale/messages(ar-${region}).xlf
+++ b/projects/admin/src/locale/messages(ar-${region}).xlf
@@ -642,6 +642,30 @@
           <context context-type="linenumber">5</context>
         </context-group>
       </trans-unit>
+      <trans-unit id="3364132489339234725" datatype="html">
+        <source>confirm</source>
+        <target state="translated">تأكيد</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/components/user-profile/user-profile.component.html</context>
+          <context context-type="linenumber">15</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="7977761628594328784" datatype="html">
+        <source>confirm</source>
+        <target state="translated">تأكيد</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/components/user-profile/user-profile.component.html</context>
+          <context context-type="linenumber">27</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="1807066826776143827" datatype="html">
+        <source>Edit User Profile</source>
+        <target state="translated">تعديل الملف الشخصي</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/components/user-profile/user-profile.component.html</context>
+          <context context-type="linenumber">5</context>
+        </context-group>
+      </trans-unit>
     </body>
   </file>
 </xliff>
