--- a/projects/admin/src/locale/messages(ar-${region}).xlf
+++ b/projects/admin/src/locale/messages(ar-${region}).xlf
@@ -666,6 +666,31 @@
           <context context-type="linenumber">5</context>
         </context-group>
       </trans-unit>
+      <trans-unit id="5459413922400282310" datatype="html">
+        <source>Password should be at least 6 characters</source>
+        <target state="translated">كلمة السر على الأقل ٦ احرف</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/components/user-profile/user-profile.component.html</context>
+          <context context-type="linenumber">14</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="933475654185758725" datatype="html">
+        <source>Confirm Your Password</source>
+        <target state="translated">الرجاء تأكيد كلمة السر</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/components/user-profile/user-profile.component.html</context>
+          <context context-type="linenumber">23</context>
+        </context-group>
+        <note priority="1" from="description">Confirm Your Password</note>
+      </trans-unit>
+      <trans-unit id="6451269955734195952" datatype="html">
+        <source>Passwords do not match</source>
+        <target state="translated">كلمة السر غير متطابقة</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/components/user-profile/user-profile.component.html</context>
+          <context context-type="linenumber">27</context>
+        </context-group>
+      </trans-unit>
     </body>
   </file>
 </xliff>
