--- a/projects/admin/src/locale/messages(ar-${region}).xlf
+++ b/projects/admin/src/locale/messages(ar-${region}).xlf
@@ -689,6 +689,8 @@
         <context-group purpose="location">
           <context context-type="sourcefile">projects/admin/src/app/components/user-profile/user-profile.component.html</context>
           <context context-type="linenumber">27</context>
+          </context-group>
+          </trans-unit>
       <trans-unit id="608673774565446711" datatype="html">
         <source>quizzes</source>
         <target state="translated">الأختبارات</target>
